--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="/style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
+    <script src="https://use.fontawesome.com/d08bc238e6.js"></script>
   </head>
   <body>
     <div class="container"></div>
